[tool.poetry]
name = "zemfrog-test"
version = "1.0.2"
description = "Zemfrog unit testing tools"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
zemfrog = "^4.0.5"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
ipython = "^7.22.0"

[tool.poetry.plugins]

pytest11 = {zemfrog_test = "zemfrog_test.fixtures"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
